--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,23 @@
 .DS_Store
+
 .idea
+
 *.ai
+
 *.log
+
 *.pdf
+
 *.psd
+
 *.sublime*
+
+build/
 node_modules/
+
 npm-debug.*
+
 source/css/*.css
+
 Thumbs.db
+
