--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "7.2.x",
     "browser-sync": "2.23.x",
+    "del": "^3.0.0",
     "gulp": "3.9.x",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
@@ -14,6 +15,7 @@
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
     "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-svgstore": "^6.1.1",
     "gulp-webp": "^3.0.0",
     "posthtml-include": "^1.1.0",
@@ -25,7 +27,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint 'source/less/**/*.less' --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp style",
+    "build": "gulp build", 
     "start": "gulp serve"
   },
   "browserslist": [
